# AI2CUP

./: .gitignore  Makefile  README.md  nwxt.md  render.yaml  vercel.json
.ai/: system_instructions.md
apps/backend/: .dockerignore  .env.example  inspect_ds.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/backend/app/: __init__.py  config.py  dependencies.py  main.py  models.py
apps/backend/app/api/: __init__.py
apps/backend/app/api/v1/: __init__.py  auth.py  health.py  listing.py  match.py  price.py  quality.py  router.py
apps/backend/app/core/: __init__.py  auth.py  constants.py  exceptions.py  middleware.py
apps/backend/app/data/: __init__.py
apps/backend/app/data/processors/: eco_data_processor.py  schema.py
apps/backend/app/data/repositories/: __init__.py
apps/backend/app/data/seed/: __init__.py  fetch_quality_data.py  generate_dataset.py  marketplace.py
apps/backend/app/data/storage/: .gitkeep  coffee_prices.csv  trained_model.joblib
apps/backend/app/ml/: __init__.py  base.py  matcher.py  price_model.py  price_model_v2.py  quality_model.py  registry.py  train_quality_model.py
apps/backend/app/schemas/: auth.py  common.py  listing.py  match.py  price.py  quality.py
apps/backend/app/services/: match_service.py  price_service.py  quality_service.py
apps/backend/ckpt/: trained_model_v2.joblib
apps/backend/tests/: conftest.py
apps/backend/tests/test_api/: test_health.py  test_price.py
backend/: main.py  requirements.txt
docs/: ai2cup_architecture_redesign.md  deployment.md  local_sharing_guide.md  sqlite_web_view.md  (+3 more)
(+67 files in other folders)
