[project]
name = "ai2cup-backend"
version = "2.0.0"
description = "AI-powered platform for improving Ethiopian coffee trade"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]
